@@ -31,6 +31,8 @@ New features:
 
 * David Fries filled in the displayed file permission mode bits.
 
+* David Fries added option 'ssh-options' to pass options to ssh.
+
 Bug fixes:
 
 * The Obnam SFTP plugin would loop infinitely if it lost the
